# genai-chatting

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: azure-container-apps.yml  run-tests.yml
genai-frontend/: package-lock.json  package.json
genai-frontend/public/: index.html  manifest.json
genai-frontend/src/: App.css  App.test.tsx  App.tsx  chatbox.test.tsx  chatbox.tsx  index.tsx
src/genai_backend/: genai_backend.py  ingest.py
tests/: test_genai_backend.py
