[project]
name = "genai-testing"
version = "0.1.0"
description = "A FastAPI application for testing GenAI capabilities"
authors = [
    {name = "Olli Helminen", email = "coding@winterburn.aleeas.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "openai>=1.3.0",
    "qdrant-client>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.1",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["genai_backend"]
